OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Status_Normalization__mdt/Onboarding_Status_Normalization__mdt.object-meta.xml
<CustomObject>
    <description>Normalization rules for Onboarding Requirement statuses.</description>
    <label>Onboarding Status Normalization</label>
    <pluralLabel>Onboarding Status Normalizations</pluralLabel>
</CustomObject>