OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Status_Normalization__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Marks the normalization rule as active.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>