OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Status_Normalization__mdt/fields/Normalized_Status__c.field-meta.xml
<CustomField>
    <fullName>Normalized_Status__c</fullName>
    <description>Normalized status output used by BRE.</description>
    <label>Normalized Status</label>
    <required>true</required>
    <type>Text</type>
    <length>255</length>
</CustomField>