OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Status_Normalization__mdt/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Raw requirement status to normalize.</description>
    <label>Status</label>
    <required>true</required>
    <type>Text</type>
    <length>255</length>
</CustomField>